--- a/nginx.conf
+++ b/nginx.conf
@@ -2,7 +2,14 @@ proxy_cache_path /var/cache/nginx/cache levels=1:2 keys_zone=my_cache:10m inacti
 
 server {
     listen 80;
+    server_name kolasf.ru www.kolasf.ru;
 
+    return 301 https://$host$request_uri;
+}
+
+server{
+    listen 443 ssl;
+    
 
 location / {
         root /usr/share/nginx/html;
