--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
     build:
       context: ./backend
     env_file:
-    - .env
+    - ./backend/.env
     ports:
     - 8082:8082
     volumes:
