--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,13 +28,32 @@ services:
     volumes:
       - postgres-db:/var/lib/postgresql/data
 
+  certbot:
+    image: certbot/certbot
+    volumes:
+      - ./nginx/certbot/conf:/etc/letsencrypt
+      - ./nginx/certbot/www:/var/www/certbot
+    entrypoint: >
+      sh -c "trap exit TERM; 
+             certbot certonly --webroot --webroot-path=/var/www/certbot 
+             -d kolasf.ru -d www.kolasf.ru --email amel0820@mail.ru --agree-tos --non-interactive; 
+             while :; do sleep 6h & wait $${!}; done;"
+    depends_on:
+      - nginx
+
   nginx:
     image: nginx:latest
     ports:
       - "80:80"
+      - "443:443"
     volumes:
+      - ./nginx/certbot/conf:/etc/letsencrypt
+      - ./nginx/certbot/www:/var/www/certbot
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ./frontend/build:/usr/share/nginx/html
+    environment:
+      - NGINX_HOST=kolasf.ru
+      - NGINX_EMAIL=amel0820@mail.ru
     depends_on:
       - backend
       - frontend
