--- a/nginx.conf
+++ b/nginx.conf
@@ -9,6 +9,25 @@ server {
 
 server{
     listen 443 ssl;
+    server_name kolasf.ru www.kolasf.ru;
+
+    # Пути к сертификатам
+    ssl_certificate /etc/letsencrypt/live/kolasf.ru/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/kolasf.ru/privkey.pem;
+    ssl_trusted_certificate /etc/letsencrypt/live/kolasf.ru/chain.pem;
+
+    # SSL параметры
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers 'ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384';
+    ssl_prefer_server_ciphers off;
+
+    # HTTP Strict Transport Security (HSTS)
+    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+
+    # Другие безопасные заголовки
+    add_header X-Content-Type-Options "nosniff";
+    add_header X-XSS-Protection "1; mode=block";
+    add_header X-Frame-Options "SAMEORIGIN";
     
 
 location / {
