--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,13 @@
+version: '3.7'
+
 services:
   backend:
     build:
       context: ./backend
     env_file:
-    - ./backend/.env
+      - ./backend/.env
     ports:
-    - 8082:8082
+      - 8082:8082
     volumes:
       - ./backend:/app
     command: go run main.go
@@ -31,8 +33,8 @@ services:
   certbot:
     image: certbot/certbot
     volumes:
-      - /etc/letsencrypt:/etc/letsencrypt
-      - /var/www/certbot:/var/www/certbot
+      - ./nginx/certbot/conf:/etc/letsencrypt
+      - ./nginx/certbot/www:/var/www/certbot
     entrypoint: >
       sh -c "trap exit TERM; 
              certbot certonly --webroot --webroot-path=/var/www/certbot 
@@ -40,6 +42,7 @@ services:
              while :; do sleep 6h & wait $${!}; done;"
     depends_on:
       - nginx
+    restart: unless-stopped  # Убедитесь, что контейнер перезапускается, если Certbot не завершился успешно
 
   nginx:
     image: nginx:latest
@@ -47,8 +50,8 @@ services:
       - "80:80"
       - "443:443"
     volumes:
-      - /etc/letsencrypt:/etc/letsencrypt
-      - /var/www/certbot:/var/www/certbot
+      - ./nginx/certbot/conf:/etc/letsencrypt
+      - ./nginx/certbot/www:/var/www/certbot
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ./frontend/build:/usr/share/nginx/html
     environment:
@@ -57,7 +60,7 @@ services:
     depends_on:
       - backend
       - frontend
-      
+    command: /bin/sh -c "until [ -f /etc/letsencrypt/live/kolasf.ru/fullchain.pem ]; do echo 'Waiting for certificates...'; sleep 5; done; nginx -g 'daemon off;'"
+
 volumes:
   postgres-db:
-  
