--- a/nginx.conf
+++ b/nginx.conf
@@ -46,7 +46,7 @@ location / {
     }
 
     location /api {
-        proxy_pass https://backend:8082;
+        proxy_pass http://backend:8082;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;  # Для WebSocket, если требуется
         proxy_set_header Connection 'upgrade';
